--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+
+.body-container{
+    font-size: 1.2em;
+    margin: 0 10vw 0 10vw;
+}
+.user-action-div{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 50%;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Tic Tac Toe designs */
+.ttt-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width:60px;
+    margin: 2.5px;
+    font-size: 30px;
+    font-weight: 700;
+    color: grey;
+    font-family: emoji;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.363);
+    cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.game-board{
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto auto;
 }
